--- a/src/templates/inc/right nav.html
+++ b/src/templates/inc/right nav.html
@@ -1,105 +1,8 @@
+{% load static %}
 <!-- Sidebar -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.clock {
-  width: 200px;
-  height: 200px;
-  margin-right: 70px;
-  margin-top: 40px;
-  border-radius: 50%;
-  background-image: url("https://i.postimg.cc/hjVspvcJ/clock.png");
-  background-color: #091921;
-  background-size: cover;
-  display: flex;
-  /*content: "";
-  height: 395px;
-  width: 550px;
-  background-color: #2a2f40;*/
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
-    inset 0 -15px 15px rgba(255, 255, 255, 0.05), 0 15px 15px rgba(0, 0, 0, 0.3),
-    inset 0 15px 15px rgba(0, 0, 0, 0.3);
-}
-/*align-items: center;
-  background-color: #ff6d39;
-  margin-left: 93px;*/
-.clock::before {
-  content: "";
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  background-color: #fff;
-  border-radius: 50%;
-  z-index: 1000;
-}
-
-.hour,
-.min,
-.sec {
-  position: absolute;
-}
-/*align-items: center;
-  background-color: #ff6d39;
-  margin-left: 93px;*/
-.hr {
-  width: 100px;
-  height: 100px;
-}
-
-.mn {
-  width: 135px;
-  height: 135px;
-}
-
-.sc {
-  width: 150px;
-  height: 150px;
-}
-
-.hr,
-.mn,
-.sc {
-  display: flex;
-  justify-content: center;
-}
-/*align-items: center;
-  background-color: #ff6d39;
-  margin-left: 93px;*/
-.hr::before {
-  content: "";
-  width: 8px;
-  height: 80px;
-  background-color: #ff105e;
-  z-index: 100;
-  border-radius: 5px;
-}
-/*content: "";
-  height: 395px;
-  width: 550px;
-  background-color: #2a2f40;*/
-.mn::before {
-  content: "";
-  width: 6px;
-  height: 90px;
-  background-color: rgb(15, 105, 207);
-  z-index: 11;
-  border-radius: 5px;
-}
-/*align-items: center;
-  background-color: #ff6d39;
-  margin-left: 93px;*/
-.sc::before {
-  content: "";
-  width: 2px;
-  height: 140px;
-  background-color: #fff;
-  z-index: 10;
-  border-radius: 5px;
-}
-
-</style>
+<link rel="stylesheet" href="{% static 'css/clock.css' %}">
 </head>
         <nav dir="rtl" class="navbar-dark" style="background-color: #ce6262; height: 530px">
             <br><br>
@@ -162,123 +65,18 @@
                          <div class="sc" id="sc"></div>
                        </div>
                      </div>
-                    <script>
-                     const deg = 6; //360deg / 60(min||sec) => 6
-                    const hr = document.querySelector("#hr");
-                    const mn = document.querySelector("#mn");
-                    const sc = document.querySelector("#sc");
-                    /*var digits = {};
+                    <p class="text-center text-white mt-4" id="demo"></p>
 
-                        var positions = ['h1', 'h2', ':', 'm1', 'm2', ':', 's1', 's2' ];
-
-                        var digitHolder = clock.find('.digits');
-
-                        $.each(positions, function(){
-                    */
-                    setInterval(() => {
-                      let day = new Date();
-                      let hh = day.getHours() * 30; //360deg / 12 hour => 30
-                      let mm = day.getMinutes() * deg;
-                      let ss = day.getSeconds() * deg;
-                    /*var digits = {};
-
-                        var positions = ['h1', 'h2', ':', 'm1', 'm2', ':', 's1', 's2' ];
-
-                        var digitHolder = clock.find('.digits');
-
-                        $.each(positions, function(){
-                    */
-                      hr.style.transform = `rotateZ(${hh + mm / 12}deg)`;
-                      mn.style.transform = `rotateZ(${mm}deg)`;
-                      sc.style.transform = `rotateZ(${ss}deg)`;
-                    });
-
+                    <!-- Script file -->
+                    <script src="{% static 'js/clock.js' %}">
                     </script>
+                    <!--End Script file -->
 
                     <!-- Online Clock2 -->
 {#                    <canvas id="canvas" width="200" height="200" style="margin-left: 80px; margin-top: 20px"></canvas>#}
-{##}
-{#                    <script>#}
-{#                    var canvas = document.getElementById("canvas");#}
-{#                    var ctx = canvas.getContext("2d");#}
-{#                    var radius = canvas.height / 2;#}
-{#                    ctx.translate(radius, radius);#}
-{#                    radius = radius * 0.90#}
-{#                    setInterval(drawClock, 1000);#}
-{##}
-{#                    function drawClock() {#}
-{#                      drawFace(ctx, radius);#}
-{#                      drawNumbers(ctx, radius);#}
-{#                      drawTime(ctx, radius);#}
-{#                    }#}
-{##}
-{#                    function drawFace(ctx, radius) {#}
-{#                      var grad;#}
-{#                      ctx.beginPath();#}
-{#                      ctx.arc(0, 0, radius, 0, 2*Math.PI);#}
-{#                      ctx.fillStyle = 'white';#}
-{#                      ctx.fill();#}
-{#                      grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);#}
-{#                      grad.addColorStop(0, '#333');#}
-{#                      grad.addColorStop(0.5, 'white');#}
-{#                      grad.addColorStop(1, '#333');#}
-{#                      ctx.strokeStyle = grad;#}
-{#                      ctx.lineWidth = radius*0.1;#}
-{#                      ctx.stroke();#}
-{#                      ctx.beginPath();#}
-{#                      ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);#}
-{#                      ctx.fillStyle = '#333';#}
-{#                      ctx.fill();#}
-{#                    }#}
-{##}
-{#                    function drawNumbers(ctx, radius) {#}
-{#                      var ang;#}
-{#                      var num;#}
-{#                      ctx.font = radius*0.15 + "px arial";#}
-{#                      ctx.textBaseline="middle";#}
-{#                      ctx.textAlign="center";#}
-{#                      for(num = 1; num < 13; num++){#}
-{#                        ang = num * Math.PI / 6;#}
-{#                        ctx.rotate(ang);#}
-{#                        ctx.translate(0, -radius*0.85);#}
-{#                        ctx.rotate(-ang);#}
-{#                        ctx.fillText(num.toString(), 0, 0);#}
-{#                        ctx.rotate(ang);#}
-{#                        ctx.translate(0, radius*0.85);#}
-{#                        ctx.rotate(-ang);#}
-{#                      }#}
-{#                    }#}
-{##}
-{#                    function drawTime(ctx, radius){#}
-{#                        var now = new Date();#}
-{#                        var hour = now.getHours();#}
-{#                        var minute = now.getMinutes();#}
-{#                        var second = now.getSeconds();#}
-{#                        //hour#}
-{#                        hour=hour%12;#}
-{#                        hour=(hour*Math.PI/6)+#}
-{#                        (minute*Math.PI/(6*60))+#}
-{#                        (second*Math.PI/(360*60));#}
-{#                        drawHand(ctx, hour, radius*0.5, radius*0.07);#}
-{#                        //minute#}
-{#                        minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));#}
-{#                        drawHand(ctx, minute, radius*0.8, radius*0.07);#}
-{#                        // second#}
-{#                        second=(second*Math.PI/30);#}
-{#                        drawHand(ctx, second, radius*0.9, radius*0.02);#}
-{#                    }#}
-{##}
-{#                    function drawHand(ctx, pos, length, width) {#}
-{#                        ctx.beginPath();#}
-{#                        ctx.lineWidth = width;#}
-{#                        ctx.lineCap = "round";#}
-{#                        ctx.moveTo(0,0);#}
-{#                        ctx.rotate(pos);#}
-{#                        ctx.lineTo(0, -length);#}
-{#                        ctx.stroke();#}
-{#                        ctx.rotate(-pos);#}
-{#                    }#}
-{#                    </script>#}
+                    <!--End Online Clock2 -->
+
+                    <!-- Navbar2 -->
 {#                    <p class="text-center text-white" style="margin-bottom: 20px">پرسش های پربازدید/p>#}
 {#                    <div dir="rtl" class="card text-right" style=" width: 80%; margin-left: auto;margin-right: auto;">#}
 {#                        <table class="table table-striped text-center" dir="rtl" style="margin-left: 13px">#}
@@ -294,6 +92,8 @@
 {#                          </tbody>#}
 {#                        </table>#}
 {#                    </div>#}
+                    <!--End Navbar2 -->
+
                 </div>
             </div> <!-- /#sidebar-wrapper -->
         </nav> <!-- /#wrapper -->
